# logto-bridge

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh_CN.md  docker-compose.yml  pyproject.toml  requirements.txt  sources.list
app/: server.py
app/api/: deps.py  email.py  sms.py
app/core/: config.py  logging.py
app/integrations/: email.py  sms.py
app/templates/en/: ForgotPassword.html  OrganizationInvitation.html  Register.html  SignIn.html
app/templates/zh-CN/: ForgotPassword.html  OrganizationInvitation.html  Register.html  SignIn.html
config/: config.example.toml
tests/: conftest.py  test_api.py  test_config.py  test_email.py  test_sms.py
